# x-media

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  binding.gyp  package-lock.json  package.json
addon/: hello_world.cc
codec/: CMakeLists.txt
codec/source/: VideoDecoder.cpp  VideoDecoder.hpp
examples/: CMakeLists.txt
examples/X-Image/: CMakeLists.txt  XBlendUI.cpp  XBlendUI.hpp  XEffectUI.cpp  XEffectUI.hpp  XFilterEffectListUI.cpp  XFilterEffectUI.cpp  XFilterEffectUI.hpp  XImageExample.cpp  XMixtureUI.cpp  XMixtureUI.hpp
examples/X-Particles/: CMakeLists.txt  XParticlesExample.cpp
examples/codec/: CMakeLists.txt  main.cpp
examples/cubes/: CMakeLists.txt  cubes.cpp
examples/filters/: CMakeLists.txt  filters.cpp
examples/imgui_demo/: CMakeLists.txt
examples/layers/: CMakeLists.txt  XEffectListUI.cpp  XEffectListUI.hpp  XEffectUI.cpp  XEffectUI.hpp  XFilterEffectListUI.cpp  XFilterEffectListUI.hpp  XFilterEffectUI.cpp  XFilterEffectUI.hpp  layers.cpp
examples/particles/: CMakeLists.txt  particles.cpp
examples/runtime/: imgui.ini
examples/runtime/shaders/source/: vs_filter_normal.sc
examples/runtime/shaders/source/saturation/: fs_filter_saturation.sc
examples/video_player/: Cargo.toml
examples/video_player/src/: main.rs
include/: bigg.hpp
shaders/: config  fs_blend_add.sc  fs_blend_multiply.sc  fs_blend_normal.sc  fs_brightness.sc  fs_contrast.sc  fs_default.sc  fs_exposure.sc  fs_filter_brightness.sc  fs_filter_contrast.sc  fs_filter_exposure.sc  fs_filter_hue.sc  fs_filter_levels.sc  fs_filter_monochrome.sc  fs_filter_normal.sc  fs_filter_rgb.sc  fs_filter_saturation.sc  fs_filter_white_balance.sc  fs_hue.sc  fs_levels.sc  fs_matte_alpha.sc  fs_monochrome.sc  fs_rgb.sc  fs_saturation.sc  fs_transition_fade.sc  fs_white_balance.sc  vs_default.sc  vs_filter_normal.sc
source/: Emitter.cpp  Emitter.h  PackRect.hpp  ParticleSystem.cpp  ParticleSystem.hpp  XBlend.hpp  XBlendHelper.cpp  XBlendHelper.hpp  XBlender.cpp  XBlender.hpp  XBounds.cpp  XBounds.hpp  XEffect.cpp  XEffect.hpp  XEmitter.cpp  XEmitter.h  XFilter.hpp  XFilterEffect.cpp  XFilterEffect.hpp  XFrameBuffer.cpp  XFrameBuffer.hpp  XFrameBufferPool.cpp  XFrameBufferPool.hpp  XFrameHelper.cpp  XFrameHelper.hpp  XFrameLayer.cpp  XImage.cpp  XImage.hpp  XImageFileOutput.cpp  XImageFileOutput.hpp  XImageFilter.cpp  XImageFilter.hpp  XImageFrameBuffer.cpp  XImageFrameBuffer.hpp  XImageInput.cpp  XImageInput.hpp  XImageInputOutput.cpp  XImageInputOutput.hpp  XImageOutput.cpp  XImageOutput.hpp  (+21 more)
source/effects/: XBlend.hpp  XEffect.cpp  XEffect.hpp  XEffectProcessor.cpp  XEffectProcessor.hpp  XFilter.cpp  XFilter.hpp  XFilterEffect.cpp  XFilterEffect.hpp  XMixer.cpp  XMixer.hpp  XShaderProcessor.cpp  XShaderProcessor.hpp  XTransform.cpp  XTransform.hpp  XTwoInputEffectProcessor.cpp  XTwoInputEffectProcessor.hpp  XTwoInputFilter.cpp  XTwoInputFilter.hpp  XTwoInputShaderProcessor.cpp  XTwoInputShaderProcessor.hpp
source/filter/: XFilter.cpp  XFilter.hpp  XFilterEffect.cpp  XFilterEffect.hpp  XTwoInputFilter.cpp  XTwoInputFilter.hpp
source/inout/: XFrameOutput.cpp  XFrameOutput.hpp  XInput.cpp  XInput.hpp  XInputOutput.hpp  XOutput.cpp  XOutput.hpp
source/layers/: XFrameLayer.cpp  XFrameLayer.hpp  XLayer.cpp  XLayer.hpp
source/particles/: XEmitter.cpp  XEmitter.h  XParticles.cpp  XParticles.hpp
src/codec/: FFmpegWrapper.hpp  VideoDecoder.cpp  VideoDecoder.hpp  ffmpeg_wrapper.hpp  video_decoder.cpp  video_decoder.hpp
src/player/: Player.cpp  Player.hpp  player.cpp  player.hpp
src/utils/: Logger.hpp
tools/: shader_compiler.py
xme_engine/: Cargo.toml
xme_engine/src/: lib.rs  state.rs  timeline.rs  tracks.rs  video_engine.rs
xme_mpeg/: Cargo.toml
xme_mpeg/src/: lib.rs
xme_renderer/: Cargo.toml
xme_renderer/src/: shader.wgsl  texture.rs
xvideo_engine/: Cargo.toml
xvideo_engine/src/: lib.rs  timeline.rs  tracks.rs  video_engine.rs
xvideo_example/: Cargo.toml
xvideo_example/src/: main.rs
xvideo_mpeg/: Cargo.toml
xvideo_renderer/: Cargo.toml
xvideo_renderer/src/: footages.rs  layer.rs  lib.rs  renderer.rs  vertex.rs  video_renderer.rs
